<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_landing_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.main.LandingPage">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/applogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- App Title -->
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/button_color"
        android:text="@string/login_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Create Account Button -->
    <Button
        android:id="@+id/create_account_button"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/button_color"
        android:text="@string/register_screen_title"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
